2009-03-10  Andrew L Janke  <a.janke@gmail.com>

 * Added GPL license and a few patches from Frank
 * added a few translations in the process of learning pot

2009-03-09  Andrew L Janke  <a.janke@gmail.com>

 * Actually works now

